# meeting_minutes

./: .gitignore  README.md  package-lock.json
.github/workflows/: deploy.yml  test.yml
backend/: .coverage  .dockerignore  .env.development  .env.example  .env.production  .env.test  Dockerfile  Dockerfile.prod  debug_imports.py  docker-compose.prod.yml  docker-compose.yml  meeting_minutes.db  pyproject.toml  report.html  requirements.txt  result.json  setup.py  test.db
backend/app/: __init__.py  crud.py  database.py  error_handlers.py  exceptions.py  main.py  models.py  schemas.py  utils.py
backend/app/core/: config.py
backend/migrations/: env.py
backend/migrations/versions/: 7ffb231688df_initial_migration.py  9c7d186d8b17_initial_migration.py
backend/tests/: conftest.py  test_crud.py  test_data.py  test_error_cases.py  test_meetings.py  test_schemas.py
