[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-minutes-app"
version = "0.1.0"
authors = [
  { name = "Your Name" },
]
description = "Meeting Minutes Auto Generation App"
requires-python = ">=3.8"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
]

[tool.pytest]
addopts = "-v -s"
testpaths = ["tests"]
pythonpath = [".", "app"]
python_files = ["test_*.py"]